# CC_Interpreter-Compiler

./: .gitignore  CMakeLists.txt  COMMENT_CLEANUP.md  README.md  output.txt  test-2.lox  test.lox  test_class_simple.lox  test_func.lox  test_simple.lox  your_program.sh
src/: Environment.hpp  Expr.hpp  LoxCallable.hpp  LoxClass.cpp  LoxClass.hpp  LoxClock.cpp  LoxClock.hpp  LoxFunction.cpp  LoxFunction.hpp  LoxInstance.cpp  LoxInstance.hpp  ResolveError.hpp  Resolver.hpp  ReturnException.hpp  RuntimeError.hpp  Stmt.hpp  astnodegenerator.cpp  astprinter.hpp  interpreter.hpp  literal.hpp  literal_to_string.cpp  literal_to_string.hpp  lox_utils.hpp  main.cpp  parser.hpp  token.hpp  tokenizer.hpp
